# Term-Keep

./: Cargo.toml  README.md  clippy.toml  test.db
data/: install.sql  logo.txt  tips.txt
src/: cli.rs  errors.rs  lib.rs  main.rs  util.rs
src/cli/: command.rs  commands.rs  mod.rs  parser.rs
src/commands/: create_note.rs  create_task.rs  deletion.rs  edit_note.rs  info.rs  mod.rs  note_creation.rs  note_display.rs  note_edit.rs  pin_note.rs  search.rs  show_all.rs  show_one.rs  tasks.rs  templates.rs
src/config/: env.rs
src/controllers/: info.rs  mod.rs  note_creation.rs  note_display.rs  note_edit.rs  search.rs  tags.rs  tasks.rs  templates.rs
src/errors/: not_found_by_field_error.rs  not_found_by_id_error.rs  row_not_changed_error.rs
src/helpers/: mod.rs  note_fmt.rs
src/models/: mod.rs  note.rs  note_type.rs  task_status.rs  template.rs  traits.rs
src/services/: db.rs  errors.rs  mod.rs  notes.rs  tags.rs  templates.rs  tips.rs
src/util/: checklists.rs  cli.rs  date_fmt.rs  db.rs  env.rs  files.rs  mod.rs  note_fmt.rs  search.rs  strings.rs  tags.rs
tests/integration/: cli_test.rs  main.rs  notes_service.rs  runner.rs
tests/integration/common/: runner.rs  util.rs
