[package]
name = "term_keep"
version = "1.0.0"
authors = ["Chris Vilches (https://github.com/ChrisVilches)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
colored = "2.0.0"
edit = "0.1.4"
rand = "0.8.5"
fuzzy-matcher = "0.3.7"
anyhow = "1.0"
